17661
```scala
With 2.10.RC2:

scala> def foo(f: String => Array[String])(s: String) = ()
foo: (f: String => Array[String])(s: String)Unit

scala> foo _
res3: (String => Array[String]) => (String => Unit) = <function1>

scala> foo(Array(_)) _
<console>:9: error: No ClassTag available for String
              foo(Array(_)) _
                       ^ 
```

It's a regression since 2.9.2, though there's a workaround:
```scala
scala> foo(Array(_))(_)
res0: String => Unit = <function1> 
```

Discussion: http://groups.google.com/group/scala-internals/browse_thread/thread/f9abd854692f51d3
